flapivor/tests/m3/hopix/typechecker/bad/43-record-field-02.hopix
type T = { x : Int }

val r : T = { x = 0 }<>

val ry : String = r.x